tensorflow sample's compile.sh uses --source